Footer section completed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 </head>
 
 <body class="font-manrope">
+  <!-- header section -->
   <header class="container mx-auto">
+    <!-- Navbar started here -->
     <nav>
       <div class="navbar bg-base-100">
         <div class="navbar-start">
@@ -61,6 +63,7 @@
             <span class="text-text-color">Buzz</span>
           </a>
         </div>
+        <!-- large devices nav -->
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal text-base  px-1">
             <li><a class="hover:text-text-color ">Home</a></li>
@@ -81,9 +84,10 @@
         </div>
       </div>
     </nav>
-    <!-- Slider or Carousel -->
+    <!-- Slider or Carousel or hero section -->
     <div class="mt-12 relative mx-5 lg:mx-auto">
       <div class="carousel  bg-blend-darken w-full lg:h-[550px] ">
+        <!-- slide-1 -->
         <div id="slide1" class="carousel-item relative w-full">
           <img src="Images/1.png" class="w-full " />
           <div
@@ -92,6 +96,7 @@
             <a href="#slide2" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
 
           </div>
+          <!-- slide-2 -->
         </div>
         <div id="slide2" class="carousel-item relative w-full">
           <img src="Images/banner-2.png" class="w-full rounded-xl" />
@@ -101,6 +106,7 @@
             <a href="#slide3" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
           </div>
         </div>
+        <!-- slide-3 -->
         <div id="slide3" class="carousel-item relative w-full">
           <img src="Images/banner-3.png" class="w-full rounded-xl" />
           <div
@@ -109,16 +115,18 @@
             <a href="#slide1" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
           </div>
         </div>
+        <!-- Black badge on hero section for large device -->
 
       </div>
-      <div class="hidden lg:block bg-primary-color rounded-xl w-[566px] absolute bottom-10 right-10 ">
+      <div class="hidden lg:block bg-neutral-900 rounded-xl w-[566px] absolute bottom-10 right-10 ">
         <div class="p-8">
           <h2 class="text-2xl text-white font-extrabold">Meet all the heroes from the field</h2>
           <p class="font-medium text-gray-400 text-base mt-4">Dit amet consectetur. Condimentum dignissim adipiscing
             aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
       </div>
-      <div class="lg:hidden block bg-primary-color rounded-lg mt-4">
+      <!-- Black badge on hero section for Mobile device -->
+      <div class="lg:hidden block bg-neutral-900 rounded-lg mt-4">
         <div class="p-4">
           <h2 class="text-lg text-white font-extrabold">Meet all the heroes from the field</h2>
           <p class="font-medium text-gray-400 text-sm mt-4">Dit amet consectetur. Condimentum dignissim adipiscing
@@ -127,12 +135,14 @@
         </div>
       </div>
     </div>
+    <!-- slider or hero section end here -->
 
 
   </header>
   <main class="container mx-auto">
     <!-- professionals Club -->
     <section class="my-24 text-center ">
+     <!-- professionals Club Tittles -->
       <div class="flex justify-center">
         <div class="border-y-2  w-10/12  border-[#13131880]border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl lg:text-4xl font-extrabold text-neutral-900">Professional Hockeys Club</h1>
@@ -142,24 +152,28 @@
       </div>
       <!-- radial progress -->
       <div class="mt-20 grid grid-cols-1 lg:grid-cols-4 gap-8 mx-5 lg:mx-auto">
+        <!-- progress-bar 1 -->
         <div>
           <div class="radial-progress rotate-[130deg]" style="--value:87; color: #FF4240;--size:10rem"
             role="progressbar"><span class="-rotate-[130deg] text-3xl font-bold text-primary-color">87%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Prayer Facility</h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
+          <!-- progress-bar 2 -->
         <div>
           <div class="radial-progress rotate-[100deg]" style="--value:95; color: #49D293;--size:10rem"
             role="progressbar"><span class="-rotate-[100deg] text-3xl font-bold text-primary-color">95%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Experienced Coach </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
+          <!-- progress-bar 3 -->
         <div>
           <div class="radial-progress rotate-[130deg]" style="--value:90; color: #FFB546;--size:10rem"
             role="progressbar"><span class="-rotate-[130deg] text-3xl font-bold text-primary-color">90%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Senior Player </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
+          <!-- progress-bar 4 -->
         <div>
           <div class="radial-progress rotate-[160deg]" style="--value:80; color: #4C8DF1;--size:10rem"
             role="progressbar"><span class=" -rotate-[160deg] text-3xl font-bold text-primary-color">80%</span></div>
@@ -171,6 +185,7 @@
     </section>
     <!-- Program section -->
     <section class="my-24">
+      <!-- Program section Tittles -->
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Program Sections</h1>
@@ -180,6 +195,7 @@
         </div>
       </div>
       <div class="flex flex-col lg:flex-row gap-8 justify-center mt-10 mx-5 lg:mx-auto ">
+        <!-- program section card-1 -->
         <div
           class="lg:w-1/2 rounded-xl bg-[url('/images/2.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
@@ -188,6 +204,7 @@
           <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
             Now!</button>
         </div>
+        <!-- program section card-2 -->
         <div
           class="lg:w-1/2 rounded-xl bg-[url('/images/3.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
@@ -196,9 +213,10 @@
           <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
             Now!</button>
         </div>
-
+      <!-- program section card-3 container --> 
       </div>
       <div class="mt-8 flex justify-center mx-5 lg:mx-auto">
+        <!-- program section card-3 -->
         <div
           class="w-full rounded-xl bg-[url('/images/4.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
@@ -212,6 +230,7 @@
     </section>
     <!-- New Products -->
     <section class="my-24">
+      <!-- New Products Tittles -->
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Our New Products</h1>
@@ -438,6 +457,7 @@
     </section>
     <!-- Clients Questions -->
     <section class="my-24">
+      <!-- Clients Questions tittles -->
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Clients Question</h1>
@@ -523,10 +543,6 @@
                   enim sagittis turpis in magna.</p>
               </div>
             </div>
-
-
-
-
           </div>
         </div>
       </div>
@@ -534,6 +550,7 @@
     </section>
     <!-- Get in Touch -->
     <section class="my-24">
+      <!-- Get in Touch tittles -->
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
@@ -612,8 +629,8 @@
     </section>
   </main>
   <!-- footer section -->
-  <footer class="footer px-20 py-20  bg-neutral-900 ">
-    <div class="">
+  <footer class="flex flex-col lg:flex-row px-4 py-4 lg:px-20 lg:py-20 justify-center  bg-neutral-900 lg:gap-36">
+    <div class="text-center lg:text-start mb-8 lg:mb-0">
       <h2 class="text-3xl  text-white font-bold">Get In Touch</h2>
       <p class="text-[#FFFFFFCC]  my-6 lg:w-[346px] text-base font-medium">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
       <p class="space-x-3">
@@ -625,29 +642,32 @@
         <span class="text-[#FFFFFFCC] font-medium text-base">hockeys@support.com</span>
       </p>
     </div>
-    <nav>
-      <header class="text-lg font-bold text-white">Company</header> 
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">About Us</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Leadership</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Careers</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">News & Articles</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Legal Notice</a>
-    </nav> 
-    <nav>
-      <header class="text-lg font-bold text-white">Support</header> 
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Help Center</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">FAQ </a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Ticket Support </a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Contact Us</a>
-    </nav> 
-    <nav>
-      <header class="text-lg font-bold text-white">Services</header> 
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Academy</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]"> Group Lesson</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Private Lesson</a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for kids </a>
-      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for Adult</a>
-    </nav>
+    <div class="grid grid-cols-2 lg:grid-cols-3 justify-center gap-10 lg:gap-36">
+      <nav class="grid grid-cols-1 text-center lg:text-start space-y-2">
+        <header class="text-lg font-bold text-white mb-4">Company</header> 
+        <a class="link link-hover text-base  font-medium text-[#FFFFFFCC]">About Us</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Leadership</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Careers</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">News & Articles</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Legal Notice</a>
+      </nav> 
+      <nav class="grid grid-cols-1 text-center lg:text-start  space-y-2">
+        <header class="text-lg font-bold text-white mb-4">Support</header> 
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Help Center</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">FAQ </a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Ticket Support </a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Contact Us</a>
+      </nav>
+      <nav class="grid grid-cols-1 text-center lg:text-start  space-y-2">
+        <header class="text-lg font-bold text-white mb-4">Services</header> 
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Academy</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]"> Group Lesson</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Private Lesson</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for kids </a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for Adult</a>
+      </nav> 
+    </div>
+ 
   </footer>
 </body>
 
