image path rechecked

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="flex flex-col lg:flex-row gap-8 justify-center mt-10 mx-5 lg:mx-auto ">
         <!-- program section card-1 -->
         <div
-          class="lg:w-1/2 rounded-xl bg-[url('/images/2.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
+          class="lg:w-1/2 rounded-xl bg-[url('./images/2.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
           <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
             assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
@@ -206,7 +206,7 @@
         </div>
         <!-- program section card-2 -->
         <div
-          class="lg:w-1/2 rounded-xl bg-[url('/images/3.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
+          class="lg:w-1/2 rounded-xl bg-[url('./images/3.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
           <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
             assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
@@ -218,7 +218,7 @@
       <div class="mt-8 flex justify-center mx-5 lg:mx-auto">
         <!-- program section card-3 -->
         <div
-          class="w-full rounded-xl bg-[url('/images/4.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]">
+          class="w-full rounded-xl bg-[url('./images/4.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
           <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
             assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
