--- a/index.html
+++ b/index.html
@@ -136,15 +136,13 @@
       </div>
     </div>
     <!-- slider or hero section end here -->
-
-
   </header>
   <main class="container mx-auto">
     <!-- professionals Club -->
     <section class="my-24 text-center ">
-     <!-- professionals Club Tittles -->
+      <!-- professionals Club Tittles -->
       <div class="flex justify-center">
-        <div class="border-y-2  w-10/12  border-[#13131880]border-dashed p-5 lg:p-10  ">
+        <div class="border-y-2  w-10/12 border-opacity-20  border-neutral-900 border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl lg:text-4xl font-extrabold text-neutral-900">Professional Hockeys Club</h1>
           <p class="lg:px-44 text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur. Condimentum
             dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
@@ -159,21 +157,21 @@
           <h2 class="text-primary-color font-semibold text-xl mt-4">Prayer Facility</h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
-          <!-- progress-bar 2 -->
+        <!-- progress-bar 2 -->
         <div>
           <div class="radial-progress rotate-[100deg]" style="--value:95; color: #49D293;--size:10rem"
             role="progressbar"><span class="-rotate-[100deg] text-3xl font-bold text-primary-color">95%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Experienced Coach </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
-          <!-- progress-bar 3 -->
+        <!-- progress-bar 3 -->
         <div>
           <div class="radial-progress rotate-[130deg]" style="--value:90; color: #FFB546;--size:10rem"
             role="progressbar"><span class="-rotate-[130deg] text-3xl font-bold text-primary-color">90%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Senior Player </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
-          <!-- progress-bar 4 -->
+        <!-- progress-bar 4 -->
         <div>
           <div class="radial-progress rotate-[160deg]" style="--value:80; color: #4C8DF1;--size:10rem"
             role="progressbar"><span class=" -rotate-[160deg] text-3xl font-bold text-primary-color">80%</span></div>
@@ -187,8 +185,8 @@
     <section class="my-24">
       <!-- Program section Tittles -->
       <div class="flex justify-center">
-        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
-          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Program Sections</h1>
+        <div class="border-y-2 border-opacity-20 w-10/12  border-neutral-900 border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-neutral-900">Program Sections</h1>
           <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
             Condimentum
             dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
@@ -197,7 +195,8 @@
       <div class="flex flex-col lg:flex-row gap-8 justify-center mt-10 mx-5 lg:mx-auto ">
         <!-- program section card-1 -->
         <div
-          class="lg:w-1/2 rounded-xl bg-[url('./images/2.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
+          class="lg:w-1/2 rounded-xl background bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] "
+          style="background-image: url(Images/2.png)">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
           <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
             assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
@@ -206,19 +205,21 @@
         </div>
         <!-- program section card-2 -->
         <div
-          class="lg:w-1/2 rounded-xl bg-[url('./images/3.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
+          class="lg:w-1/2 rounded-xl bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] "
+          style="background-image: url(Images/3.png)">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
           <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
             assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
           <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
             Now!</button>
         </div>
-      <!-- program section card-3 container --> 
+        <!-- program section card-3 container -->
       </div>
       <div class="mt-8 flex justify-center mx-5 lg:mx-auto">
         <!-- program section card-3 -->
         <div
-          class="w-full rounded-xl bg-[url('./images/4.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]">
+          class="w-full rounded-xl bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]"
+          style="background-image: url(Images/4.png)">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
           <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
             assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
@@ -232,8 +233,8 @@
     <section class="my-24">
       <!-- New Products Tittles -->
       <div class="flex justify-center">
-        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
-          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Our New Products</h1>
+        <div class="border-y-2 border-opacity-20 w-10/12  border-neutral-900] border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-neutral-900">Our New Products</h1>
           <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
             Condimentum
             dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
@@ -632,42 +633,44 @@
   <footer class="flex flex-col lg:flex-row px-4 py-4 lg:px-20 lg:py-20 justify-center  bg-neutral-900 lg:gap-36">
     <div class="text-center lg:text-start mb-8 lg:mb-0">
       <h2 class="text-3xl  text-white font-bold">Get In Touch</h2>
-      <p class="text-[#FFFFFFCC]  my-6 lg:w-[346px] text-base font-medium">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <p class="text-white text-opacity-60   my-6 lg:w-[346px] text-base font-medium">Dit amet consectetur. Condimentum
+        adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
       <p class="space-x-3">
         <i class="text-text-color fa-regular fa-envelope"></i>
-        <span class="text-[#FFFFFFCC] font-medium text-base">hockeys@support.com</span>
+        <span class="text-white text-opacity-60  font-medium text-base">hockeys@support.com</span>
       </p>
       <p class="space-x-3">
         <i class="text-text-color fa-regular fa-phone"></i>
-        <span class="text-[#FFFFFFCC] font-medium text-base">hockeys@support.com</span>
+        <span class="text-white text-opacity-60  font-medium text-base">hockeys@support.com</span>
       </p>
     </div>
-    <div class="grid grid-cols-2 lg:grid-cols-3 justify-center gap-10 lg:gap-36">
+    <div class="flex justify-center mb-8 gap-10 lg:gap-36">
       <nav class="grid grid-cols-1 text-center lg:text-start space-y-2">
-        <header class="text-lg font-bold text-white mb-4">Company</header> 
-        <a class="link link-hover text-base  font-medium text-[#FFFFFFCC]">About Us</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Leadership</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Careers</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">News & Articles</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Legal Notice</a>
-      </nav> 
-      <nav class="grid grid-cols-1 text-center lg:text-start  space-y-2">
-        <header class="text-lg font-bold text-white mb-4">Support</header> 
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Help Center</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">FAQ </a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Ticket Support </a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Contact Us</a>
+        <header class="text-lg font-bold text-white mb-4">Company</header>
+        <a class="link link-hover text-base  font-medium text-white text-opacity-60 ">About Us</a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Leadership</a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Careers</a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">News & Articles</a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Legal Notice</a>
       </nav>
       <nav class="grid grid-cols-1 text-center lg:text-start  space-y-2">
-        <header class="text-lg font-bold text-white mb-4">Services</header> 
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Academy</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]"> Group Lesson</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Private Lesson</a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for kids </a>
-        <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for Adult</a>
-      </nav> 
+        <header class="text-lg font-bold text-white mb-4">Support</header>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Help Center</a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">FAQ </a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Ticket Support </a>
+        <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Contact Us</a>
+      </nav>
+
     </div>
- 
+    <nav class=" grid grid-cols-1 text-center lg:text-start  space-y-2">
+      <header class="text-lg font-bold text-white mb-4">Services</header>
+      <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Academy</a>
+      <a class="link link-hover text-base font-medium text-white text-opacity-60 "> Group Lesson</a>
+      <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Private Lesson</a>
+      <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Hockeys for kids </a>
+      <a class="link link-hover text-base font-medium text-white text-opacity-60 ">Hockeys for Adult</a>
+    </nav>
+
   </footer>
 </body>
 
