--- a/index.html
+++ b/index.html
@@ -121,22 +121,20 @@
       <div class="hidden lg:block bg-neutral-900 rounded-xl w-[566px] absolute bottom-10 right-10 ">
         <div class="p-8">
           <h2 class="text-2xl text-white font-extrabold">Meet all the heroes from the field</h2>
-          <p class="font-medium text-gray-400 text-base mt-4">Dit amet consectetur. Condimentum dignissim adipiscing
-            aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="font-medium text-gray-400 text-base mt-4"> We've done the handshakes, the small talk and the negotiating. We know what it takes and have the respect of our peers. </p>
         </div>
       </div>
       <!-- Black badge on hero section for Mobile device -->
       <div class="lg:hidden block bg-neutral-900 rounded-lg mt-4">
         <div class="p-4">
           <h2 class="text-lg text-white font-extrabold">Meet all the heroes from the field</h2>
-          <p class="font-medium text-gray-400 text-sm mt-4">Dit amet consectetur. Condimentum dignissim adipiscing
-            aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="font-medium text-gray-400 text-sm mt-4">We've done the handshakes, the small talk and the negotiating. We know what it takes and have the respect of our peers. </p>
         </div>
       </div>
     </div>
-    <!-- slider or hero section end here -->
   </header>
+
+  
   <main class="container mx-auto">
     <!-- professionals Club -->
     <section class="my-24 text-center ">
@@ -144,8 +142,7 @@
       <div class="flex justify-center">
         <div class="border-y-2  w-10/12 border-opacity-20  border-neutral-900 border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl lg:text-4xl font-extrabold text-neutral-900">Professional Hockeys Club</h1>
-          <p class="lg:px-44 text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur. Condimentum
-            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="lg:px-44 text-sm lg:text-base text-gray-500 font-medium mt-4"> Professional athletes in hockey play for professional teams. They play hockey games in front of audiences and compete against other teams in their league.</p>
         </div>
       </div>
       <!-- radial progress -->
@@ -187,9 +184,8 @@
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-neutral-900 border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-neutral-900">Program Sections</h1>
-          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
-            Condimentum
-            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">
+            Explore our comprehensive hockey development programs designed to elevate players' skills and performance.  </p>
         </div>
       </div>
       <div class="flex flex-col lg:flex-row gap-8 justify-center mt-10 mx-5 lg:mx-auto ">
@@ -198,8 +194,7 @@
           class="lg:w-1/2 rounded-xl background bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] "
           style="background-image: url(Images/2.png)">
           <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
-          <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-            assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+          <p class="mb-5 text-white text-base font-medium">Elevate young talent with our dynamic junior program. Unleash potential, refine skills, and foster passion for hockey.</p>
           <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
             Now!</button>
         </div>
@@ -207,9 +202,8 @@
         <div
           class="lg:w-1/2 rounded-xl bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] "
           style="background-image: url(Images/3.png)">
-          <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
-          <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-            assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+          <h1 class="mb-5 text-3xl font-bold text-white">Teenager Program </h1>
+          <p class="mb-5 text-white text-base font-medium">Unlock your teen's potential on the ice with our elite hockey development program. Expert coaching, personalized training to success in the thrilling world of youth hockey awaits!</p>
           <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
             Now!</button>
         </div>
@@ -220,9 +214,8 @@
         <div
           class="w-full rounded-xl bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]"
           style="background-image: url(Images/4.png)">
-          <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
-          <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-            assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+          <h1 class="mb-5 text-3xl font-bold text-white">Professional Program </h1>
+          <p class="mb-5 text-white text-base font-medium">Elevate your game with our elite hockey agency's professional program. Unlock personalized training, strategic career guidance.Join us!</p>
           <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
             Now!</button>
         </div>
@@ -235,9 +228,7 @@
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-neutral-900] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-neutral-900">Our New Products</h1>
-          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
-            Condimentum
-            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Score big with our latest innovation! Introducing cutting-edge player analytics and scouting tools, revolutionizing the game for hockey enthusiasts and professionals alike</p>
         </div>
       </div>
       <!-- All Cart are Here -->
@@ -263,8 +254,7 @@
               </div>
               <div>
                 <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
-                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
-                  sagittis.
+                <p class="text-[#13131899] text-base font-medium mt-3">Unleash your potential on the ice with our cutting-edge hockey gear.
                 </p>
                 <div class="flex items-center gap-4 mt-4">
                   <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
@@ -298,8 +288,7 @@
               </div>
               <div>
                 <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
-                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
-                  sagittis.
+                <p class="text-[#13131899] text-base font-medium mt-3">Unleash your potential on the ice with our cutting-edge hockey gear.
                 </p>
                 <div class="flex items-center gap-4 mt-4">
                   <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
@@ -333,8 +322,7 @@
               </div>
               <div>
                 <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
-                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
-                  sagittis.
+                <p class="text-[#13131899] text-base font-medium mt-3">Unleash your potential on the ice with our cutting-edge hockey gear.
                 </p>
                 <div class="flex items-center gap-4 mt-4">
                   <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
@@ -368,8 +356,7 @@
               </div>
               <div>
                 <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
-                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
-                  sagittis.
+                <p class="text-[#13131899] text-base font-medium mt-3">Unleash your potential on the ice with our cutting-edge hockey gear.
                 </p>
                 <div class="flex items-center gap-4 mt-4">
                   <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
@@ -403,8 +390,7 @@
               </div>
               <div>
                 <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
-                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
-                  sagittis.
+                <p class="text-[#13131899] text-base font-medium mt-3">Unleash your potential on the ice with our cutting-edge hockey gear.
                 </p>
                 <div class="flex items-center gap-4 mt-4">
                   <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
@@ -438,8 +424,7 @@
               </div>
               <div>
                 <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
-                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
-                  sagittis.
+                <p class="text-[#13131899] text-base font-medium mt-3">Unleash your potential on the ice with our cutting-edge hockey gear.
                 </p>
                 <div class="flex items-center gap-4 mt-4">
                   <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
@@ -462,16 +447,14 @@
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Clients Question</h1>
-          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
-            Condimentum
-            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Curious about how our personalized approach elevates your hockey career? Explore our client questions section for insights into the transformative journey we embark upon together. </p>
         </div>
       </div>
-      <!-- Accordion -->
+      <!-- Clients Questions section image -->
       <div class="mt-10 border-2 border-gray-200 rounded-xl p-4 lg:p-6 mx-5 lg:mx-auto ">
         <div class="flex flex-col lg:flex-row gap-10">
           <img src="Images/11.png" class="w-full lg:w-1/2" />
-          <!-- Accordian Questions and Answer -->
+          <!-- Accordian section -->
           <div class="space-y-4 ">
             <!-- accordian-1 -->
             <div class="collapse collapse-plus ">
@@ -555,9 +538,7 @@
       <div class="flex justify-center">
         <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
           <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
-          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
-            Condimentum
-            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Score your winning team with us – reach out today for a powerhouse partnership on and off the ice! </p>
         </div>
       </div>
       <div class="flex flex-col lg:flex-row gap-6 mx-5 lg:mx-auto lg:p-16">
@@ -586,7 +567,8 @@
         <form>
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
             <div class="space-y-4">
-              <p class="text-neutral-900 text-xl font-bold">Your Name</p>
+              <label for=""></label>
+              <label for=""  class="text-neutral-900 text-xl font-bold">Your Name</label>
               <input type="text" name="" placeholder="Enter your full name" id=""
                 class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
             </div>
@@ -596,18 +578,18 @@
                 class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
             </div>
             <div class="space-y-4">
-              <p class="text-neutral-900 text-xl font-bold">Subject</p>
+              <label for="" class="text-neutral-900 text-xl font-bold">Subject</label>
               <input type="text" name="" placeholder="Enter your subject" id=""
                 class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
             </div>
             <div class="space-y-4">
-              <p class="text-neutral-900 text-xl font-bold">Phone Number</p>
+              <label for="" class="text-neutral-900 text-xl font-bold">Phone Number</label>
               <input type="text" name="" placeholder="Enter your phone number" id=""
                 class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
             </div>
           </div>
           <div class="space-y-4 ">
-            <p class="text-neutral-900 text-xl font-bold">Message</p>
+            <label for="" class="text-neutral-900 text-xl font-bold">Message </label>
             <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"
               class="bg-slate-100 rounded-lg py-5 pl-5 pr-36 w-full  h-auto lg:h-[362px] "></textarea>
           </div>
@@ -633,15 +615,14 @@
   <footer class="flex flex-col lg:flex-row px-4 py-4 lg:px-20 lg:py-20 justify-center  bg-neutral-900 lg:gap-36">
     <div class="text-center lg:text-start mb-8 lg:mb-0">
       <h2 class="text-3xl  text-white font-bold">Get In Touch</h2>
-      <p class="text-white text-opacity-60   my-6 lg:w-[346px] text-base font-medium">Dit amet consectetur. Condimentum
-        adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <p class="text-white text-opacity-60   my-6 lg:w-[346px] text-base font-medium">Score your winning team with us reach out today for a powerhouse partnership on and off the ice</p>
       <p class="space-x-3">
         <i class="text-text-color fa-regular fa-envelope"></i>
         <span class="text-white text-opacity-60  font-medium text-base">hockeys@support.com</span>
       </p>
       <p class="space-x-3">
         <i class="text-text-color fa-regular fa-phone"></i>
-        <span class="text-white text-opacity-60  font-medium text-base">hockeys@support.com</span>
+        <span class="text-white text-opacity-60  font-medium text-base">(+62) 123-321-543</span>
       </p>
     </div>
     <div class="flex justify-center mb-8 gap-10 lg:gap-36">
