hero background image fixed

--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
       <div class="carousel  bg-blend-darken w-full lg:h-[550px] ">
         <!-- slide-1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <img src="Images/1.png" class="w-full " />
+          <div  class="bg-no-repeat bg-cover bg-center w-full rounded-xl"
+          style="background-image: url('Images/1.png');"
+          >
+        </div>
+          
           <div
             class="justify-center lg:justify-start absolute gap-4  flex transform -translate-y-1/2 left-10 right-5 bottom-2 lg:bottom-10">
             <a href="#slide3g" class="btn btn-circle bg-neutral-900 border-none  text-white">❮</a>
