--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <!-- sixth cart -->
         <div class="mt-20 rounded-xl border-2 border-gray-200">
           <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
-            <img src="Images/10.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <img src="Images/10.png" class="lg:2/5 w-full rounded-lg shadow-xl" />
             <div class="mt-4">
               <div class="flex items-center gap-4">
                 <p class="flex items-center gap-2 ">
@@ -545,7 +545,7 @@
           <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Score your winning team with us – reach out today for a powerhouse partnership on and off the ice! </p>
         </div>
       </div>
-      <div class="flex flex-col lg:flex-row gap-6 mx-5 lg:mx-auto lg:p-16">
+      <div class="flex flex-col lg:flex-row gap-6 mt-6  mx-5 lg:mx-auto lg:p-16">
 
         <!-- Address -->
         <div class="space-y-6 border-2 border-gray-200 rounded-xl p-4 lg:p-8">
@@ -570,29 +570,28 @@
         <!-- form -->
         <form>
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-            <div class="space-y-4">
-              <label for=""></label>
+            <div class="flex flex-col space-y-4">
               <label for=""  class="text-neutral-900 text-xl font-bold">Your Name</label>
               <input type="text" name="" placeholder="Enter your full name" id=""
-                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-20 lg:pr-36">
             </div>
-            <div class="space-y-4">
+            <div class="flex flex-col space-y-4">
               <p class="text-neutral-900 text-xl font-bold">Your Email</p>
               <input type="text" name="" placeholder="Enter your email" id=""
-                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-20 lg:pr-36">
             </div>
-            <div class="space-y-4">
+            <div class="flex flex-col space-y-4">
               <label for="" class="text-neutral-900 text-xl font-bold">Subject</label>
               <input type="text" name="" placeholder="Enter your subject" id=""
-                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-20 lg:pr-36">
             </div>
-            <div class="space-y-4">
+            <div class="flex flex-col space-y-4">
               <label for="" class="text-neutral-900 text-xl font-bold">Phone Number</label>
               <input type="text" name="" placeholder="Enter your phone number" id=""
-                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-20 lg:pr-36">
             </div>
           </div>
-          <div class="space-y-4 ">
+          <div class="flex flex-col mt-5 space-y-4 ">
             <label for="" class="text-neutral-900 text-xl font-bold">Message </label>
             <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"
               class="bg-slate-100 rounded-lg py-5 pl-5 pr-36 w-full  h-auto lg:h-[362px] "></textarea>
