--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <!-- sixth cart -->
         <div class="mt-20 rounded-xl border-2 border-gray-200">
           <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
-            <img src="Images/10.png" class="lg:2/5 w-full rounded-lg shadow-xl" />
+            <img src="Images/10.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
             <div class="mt-4">
               <div class="flex items-center gap-4">
                 <p class="flex items-center gap-2 ">
@@ -458,9 +458,9 @@
       <div class="mt-10 border-2 border-gray-200 rounded-xl p-4 lg:p-6 mx-5 lg:mx-auto ">
         <div class="flex flex-col lg:flex-row gap-10">
           <img src="Images/11.png" class="w-full lg:w-1/2" />
-          <!-- Accordian section -->
+          <!-- Accordion section -->
           <div class="space-y-4 ">
-            <!-- accordian-1 -->
+            <!-- accordion-1 -->
             <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-neutral-900 text-xl font-bold">
@@ -472,7 +472,7 @@
               </div>
             </div>
             <hr>
-            <!-- accordian-2 -->
+            <!-- accordion-2 -->
             <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-neutral-900 text-xl font-bold">
@@ -484,7 +484,7 @@
               </div>
             </div>
             <hr>
-            <!-- accordian-3 -->
+            <!-- accordion-3 -->
             <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-neutral-900 text-xl font-bold">
@@ -496,7 +496,7 @@
               </div>
             </div>
             <hr>
-            <!-- accordian-4 -->
+            <!-- accordion-4 -->
             <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-neutral-900 text-xl font-bold">
@@ -508,7 +508,7 @@
               </div>
             </div>
             <hr>
-            <!-- accordian-5 -->
+            <!-- accordion-5 -->
             <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-neutral-900 text-xl font-bold">
@@ -520,7 +520,7 @@
               </div>
             </div>
             <hr>
-            <!-- accordian-6 -->
+            <!-- accordion-6 -->
             <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-neutral-900 text-xl font-bold">
